🎊😚 Checkpoint ./views/index.html:1174538/940

--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,29 @@
     </header>
 
     
+    <div id="submission">
+      <form action="addbooks" method="get">
+        <label for="title">Book Title:</label>
+        <input type="text" name="title">
+        <input type="submit">
+      </form>
+      
     
+    
+    <form>
+      <input type="text" name="id1">
+      <textarea rows="4" cols="50" name="comment">
+        
+</textarea>
+        
+      </form>
+    
+    
+    </div>
+    <div id="list">
+      
+    </div>
+   
     
     
     <!-- import the webpage's client-side javascript file -->
