🙎⚡️ Checkpoint ./views/index.html:1174538/254 ./models/book.js:1174538/215

--- a/views/index.html
+++ b/views/index.html
@@ -37,12 +37,13 @@
       
     
     
-    <form>
+    <form method="post" action="addcomm">
+      <label for="id1">Book_id</label>
+      
       <input type="text" name="id1">
-      <textarea rows="4" cols="50" name="comment">
-        
-</textarea>
-        
+      <label for="comment">Comment:(to add a comment)</label>
+      <textarea rows="4" cols="30" name="comment"></textarea>
+        <input type="submit">
       </form>
     
     
