😻🌍 Checkpoint ./server.js:1174538/469 ./views/index.html:1174538/7

--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
 
     
     <div id="submission">
-      <form action="addbooks" method="get">
+      <form action="addbooks" method="post">
         <label for="title">Book Title:</label>
         <input type="text" name="title">
         <input type="submit">
