💒😎 Checkpoint ./server.js:1174538/183 ./models/book.js:1174538/6 ./views/index.html:1174538/12

--- a/views/index.html
+++ b/views/index.html
@@ -38,9 +38,9 @@
     
     
     <form method="post" action="addcomm">
-      <label for="id1">Book_id</label>
+      <label for="book_id">Book_id</label>
       
-      <input type="text" name="id1">
+      <input type="text" name="book_id">
       <label for="comment">Comment:(to add a comment)</label>
       <textarea rows="4" cols="30" name="comment"></textarea>
         <input type="submit">
