🍞🌥 Checkpoint ./server.js:1174538/690 ./views/index.html:1174538/273 ./public/client.js:1174538/1434

--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,10 @@
       
     </div>
    
-    
+     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
+            integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
+            crossorigin="anonymous"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     
     <!-- import the webpage's client-side javascript file -->
     <script src="/client.js"></script>
