Exporting to raphael3213/personal-library

--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,14 @@
   box-sizing: border-box;
 }
 
+#booker {
+  margin: 20px;
+  padding: 5px;
+  width: 60%;
+  border: 2px solid black;
+}
+
+
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 2em;
